[workspace]

members = [
    "core",
    "workflow",
    "signature",
    "helpers",
    "aws-helpers",
    "blueprint-config-parser",
    "sdk/node",
    "sdk/python",
    "sdk/bindgen-ffi",
    "sdk/bindgen-schema",
    "sdk/bindgen-ffi-java",
    "sdk/runtime-bindings",
    "consumer-sqs",
    "consumer-kinesis",
    "consumer-azure-events-hub",
    "consumer-redis",
    "consumer-gcloud-pubsub",
    "consumer-azure-service-bus",
    "consumer-gcloud-tasks",
    "ws-registry",
    "ws-redis",
]
