[workspace]

members = [
    "core",
    "workflow",
    "signature",
    "helpers",
    "aws-helpers",
    "blueprint-config-parser",
    "sdk/node",
    "sdk/python",
    "sdk/bindgen-ffi",
    "sdk/bindgen-schema",
    "sdk/bindgen-ffi-java",
    "sdk/runtime-bindings",
    "consumers/consumer-sqs",
    "consumers/consumer-kinesis",
    "consumers/consumer-azure-events-hub",
    "consumers/consumer-redis",
    "consumers/consumer-gcloud-pubsub",
    "consumers/consumer-azure-service-bus",
    "consumers/consumer-gcloud-tasks",
    "ws/ws-registry",
    "ws/ws-redis",
]
