[package]
name = "celerity_aws_helpers"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-types = "1.3.7"
aws-config = "1.8.0"
aws-sdk-sqs = "1.73.0"
aws-sdk-account = "1.76.0"
http = "1.3.1"
