[package]
name = "celerity_aws_helpers"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-types = "1.3.12"
aws-config = "1.8.14"
aws-sdk-sqs = "1.94.0"
aws-sdk-account = "1.97.0"
http = "1.3.1"
