[package]
name = "celerity_blueprint_config_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
hashlink = "=0.8.4"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
yaml-rust2 = "0.8.1"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
insta = "=0.13.1"
