[package]
name = "celerity_consumer_redis"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.32.5", features = [
    "cluster",
    "tokio-comp",
    "aio",
    "cluster-async",
] }
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
futures = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
base64 = "0.22.1"
md5 = "0.8.0"
opentelemetry = { version = "0.22.0" }
tracing-opentelemetry = "0.23.0"

[dependencies.celerity_helpers]
path = "../helpers"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
coverage-helper = "0.2.2"
