[package]
name = "celerity_consumer_sqs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
coverage-helper = "0.2.2"
env_logger = "0.11.8"

[dependencies]
async-std = "1.13.1"
async-trait = "0.1.88"
aws-types = "1.3.7"
tokio = { version = "1.45.1", features = ["full"] }
aws-config = "1.8.0"
aws-sdk-sqs = "1.73.0"
aws-smithy-http = "0.62.1"
aws-smithy-runtime-api = "1.8.1"
aws-smithy-types = "1.3.2"
http = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
opentelemetry = { version = "0.22.0" }
tracing-opentelemetry = "0.23.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
futures = "0.3.30"

[dependencies.celerity_aws_helpers]
path = "../aws-helpers"

[dependencies.celerity_helpers]
path = "../helpers"
