[package]
name = "celerity_runtime_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["ws"] }
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.38.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"


[dependencies.celerity_blueprint_config_parser]
path = "../blueprint-config-parser"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
hyper-util = { version = "0.1.6", features = ["client", "client-legacy"] }
http-body-util = "0.1.2"
coverage-helper = "0.2.2"
futures = "0.3.30"
tokio-tungstenite = "0.23.1"
nanoid = "0.4.0"
