[package]
name = "celerity_runtime_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["ws", "http2"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-client-ip = "0.6.0"
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.38.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0" }
tracing-opentelemetry = "0.23.0"
opentelemetry-aws = "0.10.0"
nanoid = "0.4.0"

[dependencies.celerity_blueprint_config_parser]
path = "../blueprint-config-parser"

[dependencies.celerity_helpers]
path = "../helpers"

[dependencies.celerity_consumer_sqs]
path = "../consumer-sqs"
optional = true

[dependencies.celerity_consumer_kinesis]
path = "../consumer-kinesis"
optional = true

[dependencies.celerity_consumer_redis]
path = "../consumer-redis"
optional = true

[dependencies.celerity_consumer_gcloud_pubsub]
path = "../consumer-gcloud-pubsub"
optional = true

[dependencies.celerity_consumer_gcloud_tasks]
path = "../consumer-gcloud-tasks"
optional = true

[dependencies.celerity_consumer_azure_events_hub]
path = "../consumer-azure-events-hub"
optional = true

[dependencies.celerity_consumer_azure_service_bus]
path = "../consumer-azure-service-bus"
optional = true

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
hyper-util = { version = "0.1.6", features = ["client", "client-legacy"] }
http-body-util = "0.1.2"
coverage-helper = "0.2.2"
futures = "0.3.30"
tokio-tungstenite = "0.23.1"

[features]
aws_consumers = ["dep:celerity_consumer_sqs", "dep:celerity_consumer_kinesis"]
azure_consumers = [
    "dep:celerity_consumer_azure_events_hub",
    "dep:celerity_consumer_azure_service_bus",
]
gcloud_consumers = [
    "dep:celerity_consumer_gcloud_pubsub",
    "dep:celerity_consumer_gcloud_tasks",
]
celerity_one_consumers = ["dep:celerity_consumer_redis"]
