[package]
name = "celerity_runtime_core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws", "http2", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
axum-client-ip = "1.1.3"
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.38.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0" }
tracing-opentelemetry = "0.23.0"
opentelemetry-aws = "0.10.0"
nanoid = "0.4.0"
jsonpath-rust = "0.7.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-native-roots"] }

[dependencies.celerity_blueprint_config_parser]
path = "../blueprint-config-parser"

[dependencies.celerity_helpers]
path = "../helpers"

[dependencies.celerity_consumer_sqs]
path = "../consumers/consumer-sqs"
optional = true

[dependencies.celerity_consumer_kinesis]
path = "../consumers/consumer-kinesis"
optional = true

[dependencies.celerity_consumer_redis]
path = "../consumers/consumer-redis"
optional = true

[dependencies.celerity_consumer_gcloud_pubsub]
path = "../consumers/consumer-gcloud-pubsub"
optional = true

[dependencies.celerity_consumer_gcloud_tasks]
path = "../consumers/consumer-gcloud-tasks"
optional = true

[dependencies.celerity_consumer_azure_events_hub]
path = "../consumers/consumer-azure-events-hub"
optional = true

[dependencies.celerity_consumer_azure_service_bus]
path = "../consumers/consumer-azure-service-bus"
optional = true

[dependencies.celerity_ws_registry]
path = "../ws/ws-registry"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
hyper-util = { version = "0.1.6", features = ["client", "client-legacy"] }
http-body-util = "0.1.2"
coverage-helper = "0.2.2"
futures = "0.3.30"
tokio-tungstenite = "0.23.1"
httptest = "0.16.3"
biscuit = "0.7.0"
chrono = "0.4.41"
ring = "0.17.14"
tempfile = "3"

[features]
aws_consumers = ["dep:celerity_consumer_sqs", "dep:celerity_consumer_kinesis"]
azure_consumers = [
    "dep:celerity_consumer_azure_events_hub",
    "dep:celerity_consumer_azure_service_bus",
]
gcloud_consumers = [
    "dep:celerity_consumer_gcloud_pubsub",
    "dep:celerity_consumer_gcloud_tasks",
]
celerity_one_consumers = ["dep:celerity_consumer_redis"]
