[package]
name = "celerity_helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.204"
serde_json = "1.0.122"
jsonpath-rust = "0.7.1"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }

[dependencies.celerity_blueprint_config_parser]
path = "../blueprint-config-parser"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
coverage-helper = "0.2.2"
