[package]
name = "celerity_helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
jsonpath-rust = "0.7.1"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
coverage-helper = "0.2.2"
