[package]
name = "celerity_helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
jsonpath-rust = "0.7.1"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
reqwest = "0.12.23"
chrono = "0.4.41"
axum = { version = "0.8.4", features = ["ws", "http2"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
opentelemetry = "0.22.0"
tracing = "0.1.40"
futures = "0.3.30"
redis = { version = "0.32.5", features = [
    "cluster",
    "tokio-comp",
    "aio",
    "cluster-async",
] }
rand = "0.9.2"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
coverage-helper = "0.2.2"
hyper-util = { version = "0.1.6", features = ["client", "client-legacy"] }
http-body-util = "0.1.2"
