[package]
name = "bluelink_signature"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
http = "1.1.0"
sha2 = "0.10.8"

[dependencies.celerity_helpers]
path = "../helpers"


[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
coverage-helper = "0.2.2"
