[package]
name = "celerity_runtime_workflow"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-client-ip = "1.1.3"
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.38.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0" }
tracing-opentelemetry = "0.23.0"
opentelemetry-aws = "0.10.0"
nanoid = "0.4.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
futures = "0.3.30"
tokio-stream = { version = "0.1.16", features = ["sync"] }
jsonpath-rust = "0.7.1"
base64 = "0.22.1"
sha2 = "0.10.8"
hex-literal = "0.4.1"
hex = "0.4.3"
rand = "0.8.5"
async-recursion = "1.1.1"
chrono = "0.4.38"

[dependencies.celerity_blueprint_config_parser]
path = "../blueprint-config-parser"

[dependencies.celerity_helpers]
path = "../helpers"

[dependencies.celerity_runtime_core]
path = "../core"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
hyper-util = { version = "0.1.6", features = ["client", "client-legacy"] }
http-body-util = "0.1.2"
coverage-helper = "0.2.2"
futures = "0.3.30"
tokio-tungstenite = "0.23.1"
