[package]
name = "celerity_ws_redis"
description = "Redis multi-node pub/sub implementation compatible with celerity_ws_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
jsonpath-rust = "0.7.1"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
redis = { version = "0.32.3", features = [
    "cluster",
    "tokio-comp",
    "aio",
    "cluster-async",
] }
tracing = "0.1.40"

[dependencies.celerity_ws_registry]
path = "../ws-registry"

[dependencies.celerity_helpers]
path = "../helpers"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["log", "trace"] }
pretty_assertions = "1.4.0"
coverage-helper = "0.2.2"
