[package]
name = "celerity_runtime_bindgen_ffi_java"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
celerity_runtime_bindgen_ffi = { path = "../bindgen-ffi" }
jni = "0.19.0"

[build-dependencies]
celerity_runtime_bindgen_schema = { path = "../bindgen-schema" }
oo-bindgen = "0.8.8"
