[package]
name = "celerity_runtime_bindgen_ffi"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
oo-bindgen = "0.8.8"
sfio-promise = "0.2.0"
axum = "0.8.4"
serde = "1.0.204"
serde_json = "1.0.122"
tokio = "1.39.2"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "json"] }
num_cpus = "1.16.0"

[dependencies.celerity_runtime_core]
path = "../../core"

[dependencies.celerity_helpers]
path = "../../helpers"

[build-dependencies]
celerity_runtime_bindgen_schema = { path = "../bindgen-schema" }
oo-bindgen = "0.8.7"
sfio-tokio-ffi = "0.9.0"
sfio-tracing-ffi = "0.9.0"
