[package]
edition = "2021"
name = "celerityjs-runtime-sdk"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "async",
] }
napi-derive = "2.12.2"
tokio = "1.39.2"
axum = "0.7.5"
serde = "1.0.204"
serde_json = "1.0.122"

[dependencies.celerity_runtime_core]
path = "../../core"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
