[package]
edition = "2021"
name = "celerityjs-runtime-sdk"
version = "0.0.0"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.8", default-features = false, features = [
    "napi4",
    "async",
    "serde-json",
] }
napi-derive = "3"
tokio = "1.39.2"
axum = "0.8.4"
serde = "1.0.204"
serde_json = "1.0.122"
chrono = "0.4"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "json"] }

[dependencies.celerity_runtime_core]
path = "../../core"

[dependencies.celerity_helpers]
path = "../../helpers"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
