[package]
edition = "2021"
name = "celerityjs-runtime-sdk"
version = "0.0.0"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.8", default-features = false, features = [
    "napi4",
    "async",
    "serde-json",
] }
napi-derive = "3"
async-trait = "0.1.88"
tokio = "1.50.0"
axum = "0.8.9"
axum-extra = { version = "0.10.1", features = ["cookie"] }
serde = "1.0.204"
serde_json = "1.0.122"
chrono = "0.4"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.23", features = ["chrono", "json"] }

[dependencies.celerity_runtime_core]
path = "../../core"

[dependencies.celerity_helpers]
path = "../../helpers"

[dependencies.celerity_ws_registry]
path = "../../ws/ws-registry"

[build-dependencies]
napi-build = "2"

[features]
celerity_local_consumers = ["celerity_runtime_core/celerity_local_consumers"]
aws_consumers = ["celerity_runtime_core/aws_consumers"]
azure_consumers = ["celerity_runtime_core/azure_consumers"]
gcloud_consumers = ["celerity_runtime_core/gcloud_consumers"]

[profile.release]
lto = true
strip = "symbols"
