[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "celerity-runtime-sdk"
description = "Celerity Runtime SDK for Python"
requires-python = ">=3.13"
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://celerityframework.io"
Repository = "https://github.com/two-hundred/celerity"
Documentation = "https://www.celerityframework.io/docs/python-runtime/"

[dependency-groups]
dev = [
    "pytest",
    "maturin>=1.7,<2.0",
    "requests",
    "types-requests",
    "websocket-client",
    "python-dotenv",
    "redis",
    "mypy>=1.19.1",
]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true

[tool.maturin]
python-source = "python"
module-name = "celerity_runtime_sdk._celerity_runtime_sdk"
bindings = "pyo3"
features = ["pyo3/extension-module", "celerity_local_consumers", "aws_consumers", "gcloud_consumers", "azure_consumers"]
